packages/ui/src/components/Menu/index.css
:where(.cui-menu) {
	--cui-menu-background-color-focused: var(--cui-toned-control-background-color);
	color: var(--cui-color--strong);
	user-select: none;
}

:where(.cui-menu a) {
	color: inherit;
}

:where(.cui-menu .cui-label) {
	--cui-inset-vertical: calc(1.5 * var(--cui-gap));
	--cui-inset-horizontal: calc(1.5 * var(--cui-gap));
	color: inherit;
}

:where(.cui-menu-list) {
	list-style: none;
	padding: 0;
	margin: 0;
}

:where(.cui-menu-group[aria-disabled="true"]) {
	color: var(--cui-color--low);
}

:where(
	.cui-menu-group.is-active > .cui-menu-group-title,
	.cui-menu-section.is-active > .cui-menu-section-title,
) {
	color: var(--cui-control-color);
}

:where(
	.cui-menu-section-title:hover > a > .cui-label,
	li:focus > .cui-menu-section-title > a > .cui-label,
),
:where(
	.cui-menu-group-title:hover > a > .cui-label,
	li:focus > .cui-menu-group-title > a > .cui-label,
) {
	color: var(--cui-control-color--highlighted);
	background-color: var(--cui-menu-background-color-focused);
}

:where(.cui-menu-expand-toggle) {
	--cui-expand-toggle-size: calc(5 * var(--cui-gap));
	background: transparent;
	border: 0;
	color: inherit;
	height: var(--cui-expand-toggle-size);
	padding: 0;
	position: absolute;
	right: calc(100% + 1.5 * var(--cui-gap));
	width: var(--cui-expand-toggle-size);
}

:where(.cui-menu-expand-toggle)::before {
	border-bottom: 0.109375rem solid var(--cui-color--high);
	border-right: 0.109375rem solid var(--cui-color--high);
	bottom: 0;
	content: "";
	display: inline-block;
	height: 0.4em;
	left: calc(var(--cui-expand-toggle-size) / 2 - 0.2em);
	margin: auto;
	position: absolute;
	top: -0.15em;
	transform-origin: 70% 70%;
	transform: rotate(45deg);
	transition: transform var(--cui-transition-duration--fast);
	width: 0.4em;
	z-index: 1;
}

:where(.cui-menu-expand-toggle.is-collapsed)::before {
	transform: rotate(-45deg);
}

:where(.cui-menu-expand-toggle[disabled]) {
	display: none;
}

:where(.cui-menu-expand-toggle-label) {
	visibility: hidden;
}

:where(.cui-menu-section-title),
:where(.cui-menu-group-title) {
	align-items: center;
	display: flex;
	font-weight: 600;
	position: relative;
}

:where(
	.cui-menu-section-title:not([aria-disabled="true"]),
	.cui-menu-group-title:not([aria-disabled="true"]),
) {
	cursor: pointer;
}

:where(.cui-menu-section-title-content),
:where(.cui-menu-group-title-content) {
	display: flex;
	flex-direction: column;
	flex: 1;
	padding: calc(2 * var(--cui-gap));
}

:where(.cui-menu-section) {
	padding-right: 0;
	position: relative;
}

:where(.cui-menu-section-title) {
	padding-bottom: var(--cui-gap);
	padding-top: var(--cui-gap);
}

:where(.cui-menu-section-title.is-active:after) {
	visibility: unset;
}

:where(.cui-menu-section-list) {
	list-style: none;
	padding: 0;
}

:where(.cui-menu-group-list) {
	list-style: none;
	padding-left: calc(4 * var(--cui-gap));
	position: relative;
}

